resolved conflict manually letter-spacing

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -24,8 +24,7 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height:  1.4; 
-  letter-spacing: 1em;
-  color: #080C09;
+    color: #080C09;
 }
 
 @media screen and (min-width: 768px) {
